welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: missing arguments for method golomb in class golomb;
follow this method with `_' if you want to treat it as a partially applied function
	golomb(1)=1;
        ^golomb:6: error: type mismatch;
 found   : Unit
 required: Boolean
		if (compteur=golomb(i-1)) {
                            ^golomb:7: error: missing arguments for method golomb in class golomb;
follow this method with `_' if you want to treat it as a partially applied function
			golomb(i)=golomb(i-1)+1;
                        ^golomb:9: error: missing arguments for method golomb in class golomb;
follow this method with `_' if you want to treat it as a partially applied function
			golomb(i)=i;
                        ^