welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var compteur:Int=0;
	golomb(1)=1;
	for (i <- 2 to num) {
		compteur=compteur+1;
		if (compteur=golomb(i-1)) {
			golomb(i)=golomb(i-1)+1;
		} else {
			golomb(i)=i;
		}
	} 
	return(golomb(num));
}
